fix image on mobile

--- a/CSS/mediaqueries.css
+++ b/CSS/mediaqueries.css
@@ -66,6 +66,19 @@
   .bio-section-photo {
     aspect-ratio: auto;
     margin-top: 0px;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-bottom: 2rem;
+    max-width: 100%;
+  }
+
+  .bio-section-photo img {
+    max-width: min(400px, 90vw);
+    height: auto;
+    width: auto;
+    object-fit: contain;
+    display: block;
+    margin: 0 auto;
   }
 
   .work-section-right {
